--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   fl_chart: ^1.0.0
   intl: ^0.20.2
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
