--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fl_chart: ^1.0.0
   intl: ^0.20.2
   percent_indicator: ^4.2.5
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
