--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   intl: ^0.20.2
   percent_indicator: ^4.2.5
   flutter_svg: ^2.2.0
+  device_preview: ^1.3.1
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
